--- a/realisation/frontend/package.json
+++ b/realisation/frontend/package.json
@@ -40,6 +40,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.5"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "react-router-dom": "^6.4.5",
+    "tailwindcss": "^3.2.4"
   }
 }
